hphp/hack/test/typecheck/new_inference/index_array_bad.php.exp
File "index_array_bad.php", line 8, characters 3-18:
Some type arguments violate their constraints (Typing[4323])
  File "hackarray.hhi", line 33, characters 24-25:
  `Tk` is a constrained type parameter
  File "hackarray.hhi", line 33, characters 30-37:
  This type constraint is violated
  File "hackarray.hhi", line 33, characters 30-37:
  Expected `arraykey`
  File "index_array_bad.php", line 8, characters 8-12:
  But got `mixed`
File "index_array_bad.php", line 18, characters 9-18:
This value is not a valid key type for this container (Typing[4324])
  File "index_array_bad.php", line 8, characters 3-18:
  This container is an object of type dict<mixed, bool>
  File "index_array_bad.php", line 18, characters 13-17:
  A bool cannot be used as a key for an object of type dict<mixed, bool>
File "index_array_bad.php", line 19, characters 9-16:
Invalid index type for this KeyedContainer (Typing[4324])
  File "index_array_bad.php", line 9, characters 18-20:
  This is an int
  File "index_array_bad.php", line 19, characters 13-15:
  It is incompatible with a string
File "index_array_bad.php", line 20, characters 9-16:
Invalid index type for this ConstMap (Typing[4324])
  File "index_array_bad.php", line 10, characters 12-14:
  This is an int
  File "index_array_bad.php", line 20, characters 13-15:
  It is incompatible with a string
File "index_array_bad.php", line 22, characters 8-14:
This value is not a valid key type for this container (Typing[4324])
  File "index_array_bad.php", line 9, characters 3-28:
  This container is an object of type KeyedContainer<int, string>
  File "index_array_bad.php", line 12, characters 3-7:
  A mixed value cannot be used as a key for an object of type KeyedContainer<int, string>
File "index_array_bad.php", line 23, characters 8-14:
This value is not a valid key type for this container (Typing[4324])
  File "index_array_bad.php", line 10, characters 3-20:
  This container is an object of type ConstMap<int, bool>
  File "index_array_bad.php", line 12, characters 3-7:
  A mixed value cannot be used as a key for an object of type ConstMap<int, bool>
File "index_array_bad.php", line 24, characters 8-14:
This value is not a valid key type for this container (Typing[4324])
  File "index_array_bad.php", line 11, characters 3-20:
  This container is an object of type ImmMap<int, mixed>
  File "index_array_bad.php", line 12, characters 3-7:
  A mixed value cannot be used as a key for an object of type ImmMap<int, mixed>
File "index_array_bad.php", line 32, characters 24-31:
Invalid index type for this KeyedContainer (Typing[4324])
  File "index_array_bad.php", line 9, characters 18-20:
  This is an int
  File "index_array_bad.php", line 32, characters 28-30:
  It is incompatible with a string
File "index_array_bad.php", line 15, characters 8-14:
Invalid index type for this dict (Typing[4449])
  File "index_array_bad.php", line 6, characters 8-10:
  This is an int
  File "index_array_bad.php", line 15, characters 11-13:
  It is incompatible with a string
File "index_array_bad.php", line 16, characters 8-15:
Invalid index type for this dict (Typing[4449])
  File "index_array_bad.php", line 7, characters 10-12:
  This is an int
  File "index_array_bad.php", line 16, characters 12-14:
  It is incompatible with a string
